# Adaptron

./: .gitignore  README.md  pyproject.toml
adaptron/: __init__.py
adaptron/api/: main.py
adaptron/api/routes/: connectors.py  pipelines.py  playground.py  research.py  schedules.py  validate.py  wizard.py
adaptron/cli/: main.py
adaptron/connectors/: __init__.py  augmenter.py  base.py  bigquery.py  cassandra.py  cleaner.py  credentials.py  dynamodb.py  elasticsearch.py  kafka.py  manager.py  models.py  mongodb.py  mssql.py  mysql.py  oracle.py  postgresql.py  redis_conn.py  redshift.py  rest_api.py  s3.py  scheduler.py  snowflake.py  sqlite.py  stream.py
adaptron/core/: __init__.py  config.py  events.py  factory.py  pipeline.py  registry.py
adaptron/deploy/: __init__.py  base.py  gguf.py  huggingface.py  ollama.py
adaptron/evaluate/: __init__.py  base.py  bpb.py  domain.py
adaptron/ingest/: __init__.py  base.py  csv_ingester.py  docx.py  models.py  pdf.py  sql.py
adaptron/playground/: __init__.py  engine.py
adaptron/rag/: indexer.py  retriever.py
adaptron/research/: __init__.py  agent.py  config.py  runner.py  timer.py  tracker.py
adaptron/synthesize/: __init__.py  auto.py  base.py  chat.py  corpus.py  detector.py  dpo.py  instruction.py  qa.py  text2sql.py  validator.py
adaptron/train/: alignment.py  base.py  cpt.py  distill.py  full_ft.py  models.py  qlora.py
adaptron/understand/: __init__.py  base.py  chunker.py  entities.py  models.py  quality.py  schema.py
adaptron/validate/: __init__.py  benchmark.py  comparator.py  config.py  engine.py  hallucination.py  models.py  readiness.py  report.py
docs/plans/: 2026-03-07-adaptron-design.md  2026-03-07-adaptron-implementation.md  2026-03-07-playground-design.md  2026-03-07-universal-data-connector-design.md  2026-03-07-universal-data-connector-implementation.md  2026-03-08-autoresearch-integration-design.md  2026-03-08-autoresearch-integration-implementation.md  2026-03-08-model-validation-framework-design.md  2026-03-08-model-validation-framework-implementation.md  2026-03-08-production-ui-overhaul-design.md  2026-03-08-production-ui-overhaul-implementation.md
tests/api/: test_api.py  test_connectors.py  test_playground.py  test_research.py  test_schedules.py  test_validate.py
tests/cli/: test_cli.py  test_connect.py  test_research.py  test_schedule.py  test_validate.py
tests/connectors/: test_augmenter.py  test_base.py  test_bigquery.py  test_cassandra.py  test_cleaner.py  test_credentials.py  test_dynamodb.py  test_elasticsearch.py  test_kafka.py  test_manager.py  test_models.py  test_mongodb.py  test_mssql.py  test_mysql.py  test_oracle.py  test_pipeline_integration.py  test_postgresql.py  test_redis_conn.py  test_redshift.py  test_rest_api.py  test_s3.py  test_scheduler.py  test_snowflake.py  test_sqlite.py  test_stream.py
tests/core/: test_config.py  test_events.py  test_factory.py  test_pipeline.py  test_registry.py
tests/deploy/: test_huggingface.py  test_ollama.py
tests/evaluate/: test_bpb.py  test_domain.py
tests/ingest/: test_base.py  test_csv_ingester.py  test_docx.py  test_pdf.py  test_sql.py
tests/integration/: test_connector_e2e.py  test_pipeline_e2e.py  test_research_e2e.py  test_validate_e2e.py
tests/playground/: test_engine.py
tests/rag/: test_rag.py
tests/research/: test_agent.py  test_config.py  test_runner.py  test_timer.py  test_tracker.py
tests/synthesize/: test_auto.py  test_chat.py  test_corpus.py  test_detector.py  test_dpo.py  test_instruction.py  test_qa.py  test_text2sql.py  test_validator.py
tests/train/: test_alignment.py  test_base.py  test_cpt.py  test_distill.py  test_full_ft.py  test_qlora.py
tests/understand/: test_chunker.py  test_entities.py  test_quality.py  test_schema.py
tests/validate/: test_benchmark.py  test_comparator.py  test_config.py  test_engine.py  test_hallucination.py  test_readiness.py  test_report.py
web/: next.config.js  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/dashboard/: page.tsx
web/app/playground/: page.tsx
web/app/validation/: page.tsx
web/app/wizard/: page.tsx
web/components/: empty-state.tsx  grade-badge.tsx  metric-card.tsx  navbar.tsx
