[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adaptron"
version = "0.1.0"
description = "End-to-end LLM Fine-tuning Framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
train = [
    "torch>=2.1",
    "transformers>=4.40",
    "peft>=0.10",
    "trl>=0.8",
    "datasets>=2.18",
    "accelerate>=0.28",
    "bitsandbytes>=0.43",
]
ingest = [
    "langchain-community>=0.2",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "pandas>=2.2",
    "sqlalchemy>=2.0",
    "openpyxl>=3.1",
]
understand = [
    "spacy>=3.7",
    "sentence-transformers>=2.6",
]
rag = [
    "chromadb>=0.5",
    "sentence-transformers>=2.6",
]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "websockets>=12.0",
]
deploy = [
    "huggingface-hub>=0.22",
]
all = ["adaptron[train,ingest,understand,rag,api,deploy]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.3",
]

[project.scripts]
adaptron = "adaptron.cli.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
